compiler/tools/fpp-check/test/redef/module_component_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_component_instance.fpp: 2.1
instance m: M base id 0
^
error: invalid symbol M: not a component symbol
symbol is defined here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_component_instance.fpp: 1.1
module M { }
^
